<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/synth_color"
    android:orientation="vertical"
    tools:context=".view.DetailActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp">


        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:padding="5dp"
        app:cardCornerRadius="0dp">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/pontano_sans"
                    android:text="BTC/INR"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/currentPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:fontFamily="@font/pontano_sans"
                    android:gravity="right"
                    android:text="2242"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/growthRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/pontano_sans"
                    android:gravity="right"
                    android:text="2%"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/openPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/pontano_sans"
                    android:text="@string/open_price" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/openPriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/pontano_sans"
                    android:gravity="right"
                    android:minWidth="150dp"
                    android:text=""
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lowPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/pontano_sans"
                    android:text="@string/low_price" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lowPriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:minWidth="150dp"
                    android:text=""
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/highPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/pontano_sans"
                    android:text="@string/high_price" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/highPriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/pontano_sans"
                    android:gravity="right"
                    android:minWidth="150dp"
                    android:text=""
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lastPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/pontano_sans"
                    android:text="@string/last_price" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lastPriceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/pontano_sans"
                    android:gravity="right"
                    android:minWidth="150dp"
                    android:text=""
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/pontano_sans"
                    android:text="@string/volume" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/volumeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:fontFamily="@font/pontano_sans"
                    android:gravity="right"
                    android:minWidth="150dp"
                    android:text=""
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/synth_color"
            android:fontFamily="@font/pontano_sans"
            android:padding="5dp"
            android:text="@string/buy"
            android:textColor="@color/white" />

        <View
            android:layout_width="1dp"
            android:background="@color/white"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/synth_color"
            android:fontFamily="@font/pontano_sans"
            android:padding="5dp"
            android:text="@string/sell"
            android:textColor="@color/white" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>